--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-flask
-openai
-python-dotenv
-langchain
-langchain_community
-langchain_openai
-flask-wtf
-email-validator
-flask-mail
+flask==2.3.3
+openai==1.12.0
+python-dotenv==1.0.0
+langchain==0.1.0
+langchain_community==0.0.13
+langchain_openai==0.0.5
+flask-wtf==1.2.1
+email-validator==2.1.0
+flask-mail==0.9.1
+requests==2.31.0
+werkzeug==2.3.7
 
 
