--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,14 @@ werkzeug==2.3.7
 apscheduler==3.11.0
 tzlocal==5.3.1
 tiktoken==0.9.0
+flask-limiter==3.5.0
+flask-talisman==1.1.0
+flask-compress==1.14
+gunicorn==21.2.0
+python-jose==3.3.0
+bcrypt==4.0.1
+cryptography==41.0.7
+pillow==10.1.0
+python-magic==0.4.27
 
 
